TG-26 Rewrite admin interface using Angular
Finished new font management UI. This includes the option to upload files and add designers
